chore: replace repo with M2 repo_template
